dataset1235/2025-2/1379599236/users/3062747507/executions/2936945225_3691284457.log
== SUBMISSION (2025-08-25 19:07:56)
-- CODE: 
r = float(input())
r1 = Float(input())
r2 = float (input())
r3 = float (input())
m = (r*1 + r1*2 + r2*3 + r3*4) /10
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:08:15)
-- CODE: 
r = float(input())
r1 = Float(input())
r2 = float (input())
r3 = float (input())
m = (r*1 + r1*2 + r2*3 + r3*4) /10
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:07:25)
-- CODE: 
r = float(input()
r1 = Float(input()
r2 = float (input()
r3 = float (input()
m = (r*1 + r1*2 + r2*3 + r3*4) /10
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 1
    r = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 1
    r = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 1
    r = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 1
    r = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 1
    r = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 1
    r = float(input()
              ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:07:53)
-- CODE: 
r = float(input())
r1 = Float(input())
r2 = float (input())
r3 = float (input())
m = (r*1 + r1*2 + r2*3 + r3*4) /10
print(round(m,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r1 = Float(input())
         ^^^^^
NameError: name 'Float' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:08:29)
-- CODE: 
r = float(input())
r1 = float(input())
r2 = float(input())
r3 = float(input())
m = (r*1 + r1*2 + r2*3 + r3*4) /10
print(round(m,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
